--- a/Milestone-1/Module-4/assets/card.css
+++ b/Milestone-1/Module-4/assets/card.css
@@ -19,6 +19,7 @@
 
 .card{
     width: 270px;
+    height: 460px;
     border: 2px solid rgb(221, 221, 220);
     border-radius: 10px;
     padding: 15px;
@@ -32,12 +33,17 @@
 }
 
 .card h3{
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
+}
+
+.card p{
+    font-size: 160p;
 }
 
 .card img{
     width: 100%;
+    object-fit: contain;
     border-radius: 10px;
     border: 1px solid rgb(223, 223, 223);
 }
